--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="https://github.com/BryceStp/Manager-Salary-Analysis" class="image"><img src="images/image(4).jpg" alt="" /></a>
+									<a href="https://github.com/BryceStp/Chinook-Data-Analysis" class="image"><img src="images/image(4).jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Manager Salary Analysis</h2>
-										<p>I decided to take a look at the salaries of managers all across the U.S., using Excel and <a href="https://public.tableau.com/app/profile/bryce.st.pierre/viz/SalaryProject_16807226012790/Dashboard1">Tableau.</a></p>
-										<a href="https://github.com/BryceStp/Manager-Salary-Analysis" class="special">Learn more</a>
+										<p>We are looking at the Chinook records data base, which contains information about songs, artists, employees and customers (purchases) from a music store.</a></p>
+										<a href="https://github.com/BryceStp/Chinook-Data-Analysis" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
