--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 											<a href="https://github.com/BryceStp/Nashville-Housing" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="https://github.com/BryceStp/Cluster-Analysis-On-USPS-Hand-Written-Numbers" class="image"><img src="images/image(5).PNG" alt="" /></a>
+											<a href="https://github.com/BryceStp/Cluster-Analysis-On-USPS-Hand-Written-Numbers" class="image"><img src="images/image(5).png" alt="" /></a>
 											<h3 class="major">Cluster Analysis On USPS Hand Written Numbers</h3>
 											<p>In this project we kmeans and clustering to correctly classify our data set.</p>
 											<a href="https://github.com/BryceStp/Cluster-Analysis-On-USPS-Hand-Written-Numbers" class="special">Learn more</a>
