--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 								<div class="inner">
 									<a href="https://github.com/BryceStp/Chinook-Data-Analysis" class="image"><img src="images/image(4).jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Chinook Data Base Analyis</h2>
+										<h2 class="major">Chinook Data Base Analysis</h2>
 										<p>We are looking at the Chinook records data base, which contains information about songs, artists, employees and customers (purchases) from a music store.</a></p>
 										<a href="https://github.com/BryceStp/Chinook-Data-Analysis" class="special">Learn more</a>
 									</div>
