--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									<a href="https://github.com/BryceStp/Bank-Note-Fraud-Classification" class="image"><img src="images/image(1).jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Bank Note Fraud</h2>
-										<p>In This project I used logistic regression and gradient descent to discern if bank notes were fraudulent or not.</p>
+										<p>In this project I used logistic regression and gradient descent to discern if bank notes were fraudulent or not.</p>
 										<a href="https://github.com/BryceStp/Bank-Note-Fraud-Classification" class="special">Learn more</a>
 									</div>
 								</div>
